--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,11 @@ export(plot_path_density)
 export(plot_path_density_filled)
 export(read_hefty_xlsx)
 import(ggplot2)
+importFrom(cluster,pam)
+importFrom(dplyr,as_tibble)
+importFrom(dplyr,between)
 importFrom(dplyr,bind_cols)
+importFrom(dplyr,case_when)
 importFrom(dplyr,dense_rank)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
@@ -30,3 +34,4 @@ importFrom(smoothr,densify)
 importFrom(stats,as.dist)
 importFrom(stats,cutree)
 importFrom(stats,hclust)
+importFrom(stats,kmeans)
