--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: HeFTy.SmoothR
 Title: Density estimates of inverse thermal history models
-Version: 0.4.2.9000
+Version: 0.4.3
 Authors@R: c(
     person("Joel", "Padgett", , "joel.padgett@ucalgary.ca", role = c("aut", "cph")),
     person("Tobias", "Stephan", , "tobias.stephan1@yahoo.com", role = c("aut", "cre"),
@@ -12,13 +12,13 @@ License: MIT + file LICENSE
 Depends: 
     R (>= 4.1.0)
 Imports:
-    cluster,
-    dplyr,
-    ggplot2,
-    magrittr,
-    readxl,
-    sf,
-    smoothr
+    cluster (>= 2.1.4),
+    dplyr (>= 1.1.4),
+    ggplot2 (>3.5.1),
+    magrittr (>= 2.0.3),
+    readxl  (>= 1.4.3),
+    sf (>= 1.0-16),
+    smoothr (>= 1.0.1),
 Suggests: 
     knitr,
     rmarkdown,
