--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,24 +5,32 @@ export(cluster_paths)
 export(densify_paths)
 export(plot_path_density)
 export(plot_path_density_filled)
+export(read_hefty)
 export(read_hefty_xlsx)
 import(ggplot2)
 importFrom(cluster,pam)
+importFrom(dplyr,across)
 importFrom(dplyr,as_tibble)
 importFrom(dplyr,between)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,case_when)
 importFrom(dplyr,dense_rank)
 importFrom(dplyr,distinct)
+importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
+importFrom(dplyr,join_by)
+importFrom(dplyr,matches)
 importFrom(dplyr,mutate)
 importFrom(dplyr,rename)
+importFrom(dplyr,right_join)
+importFrom(dplyr,row_number)
 importFrom(dplyr,sample_n)
 importFrom(dplyr,select)
 importFrom(dplyr,semi_join)
 importFrom(dplyr,summarise)
 importFrom(dplyr,tibble)
+importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
 importFrom(readxl,read_xlsx)
 importFrom(sf,st_as_sf)
