--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,9 @@
 
 export("%>%")
 export(cluster_paths)
+export(densify_cluster)
 export(densify_paths)
+export(path_statistics)
 export(plot_path_density)
 export(plot_path_density_filled)
 export(read_hefty)
@@ -20,6 +22,7 @@ importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,join_by)
+importFrom(dplyr,left_join)
 importFrom(dplyr,matches)
 importFrom(dplyr,mutate)
 importFrom(dplyr,rename)
