--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,9 @@ importFrom(dplyr,select)
 importFrom(dplyr,semi_join)
 importFrom(dplyr,summarise)
 importFrom(dplyr,tibble)
+importFrom(forcats,as_factor)
+importFrom(forcats,fct)
+importFrom(forcats,fct_reorder)
 importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
 importFrom(readxl,read_xlsx)
