--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: HeFTy.SmoothR
-Title: Density estimates of inverse thermal history models
+Title: Analyzing Inverse Thermal History Models
 Version: 0.4.3.9003
 Authors@R: c(
     person("Joel", "Padgett", , "joel.padgett@ucalgary.ca", role = c("aut", "cph")),
     person("Tobias", "Stephan", , "tobias.stephan1@yahoo.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-9290-014X"))
   )
-Description: Creates density plots for HeFTy-modeled time-temperature
+Description: Density estimates and cluster for HeFTy-modeled time-temperature
     cooling paths.
 License: MIT + file LICENSE
 Depends: 
