--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,8 +26,6 @@ importFrom(dplyr,left_join)
 importFrom(dplyr,matches)
 importFrom(dplyr,mutate)
 importFrom(dplyr,rename)
-importFrom(dplyr,right_join)
-importFrom(dplyr,row_number)
 importFrom(dplyr,sample_n)
 importFrom(dplyr,select)
 importFrom(dplyr,semi_join)
@@ -36,6 +34,10 @@ importFrom(dplyr,tibble)
 importFrom(forcats,as_factor)
 importFrom(forcats,fct)
 importFrom(forcats,fct_reorder)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,geom_density2d)
+importFrom(ggplot2,geom_density2d_filled)
+importFrom(ggplot2,ggplot)
 importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
 importFrom(readxl,read_xlsx)
